# network-oracle

./: .gitignore  README.md  analysis.py  config.py  experiments.py  model.py  paper.tex  pyproject.toml  requirements.txt  runs.py
network_oracle/: __init__.py  diagnostics.py  metrics.py  model.py  monte_carlo.py  networks.py
network_oracle/experiments/: __init__.py  adaptive_feedback.py  baseline_reliability.py  biased_trust.py  cli.py  fixed_testimony.py  io.py  study0_baseline.py  study1_frozen_oracle.py  study2_live_oracle.py  study3_trust.py
network_oracle/figures/: __init__.py  adaptive_feedback.py  baseline_reliability.py  biased_trust.py  cli.py  fixed_testimony.py  study0.py  study1.py  study2.py  study3.py  style.py  utils.py
results/: adaptive_feedback_reliability.csv  adaptive_trust_trajectories.npz  adaptive_trust_under_bias.csv  baseline_reliability.csv  correlation_penalty_robustness.csv  fixed_testimony_grid.csv  shared_vs_independent_testimony.csv  single_agent_testimony.csv  study0.csv  study1_grid.csv  study1_isolated.csv  study1_sharedvsindep.csv  study2_reliability.csv  study2_timeseries.npz  study3_endogenous.csv  study3_robustness.csv  study3_trust_traj.npz
